<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.InfinigentConsulting.NoActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/banner" />
            </RelativeLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/white"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?actionBarSize"
        app:layout_anchorGravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:id="@+id/outlet_details_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="30dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <EditText
                android:id="@+id/outlet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/outlet_name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#000"
                android:textColorHint="#999"
                />

            <EditText
                android:id="@+id/retailer_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/retailer_code"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="#000"
                android:textColorHint="#999" />

            <EditText
                android:id="@+id/retailer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/retailer_name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#000"
                android:textColorHint="#999" />

            <EditText
                android:id="@+id/retailer_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/mobile_no"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="#000"
                android:textColorHint="#999" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/outlet_type"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:hint="@string/outlet_type"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:textColorHint="#999" />

                <ImageButton
                    android:id="@+id/outlet_type_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:background="@drawable/addbutton"
                    android:scaleType="fitCenter" />
            </LinearLayout>

            <AutoCompleteTextView
                android:id="@+id/distributor_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/distributor_name"
                android:padding="10dp"
                android:textColor="#000"
                android:textColorHint="#999" />

            <AutoCompleteTextView
                android:id="@+id/aic_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/aic_name"
                android:padding="10dp"
                android:textColor="#000"
                android:textColorHint="#999" />

            <AutoCompleteTextView
                android:id="@+id/asm_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:hint="@string/asm_name"
                android:padding="10dp"
                android:textColor="#000"
                android:textColorHint="#999" />

            <EditText
                android:id="@+id/outlet_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/outlet_address"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#000"
                android:textColorHint="#999" />

            <ImageButton
                android:id="@+id/outlate_previous_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/right_arrow" />


            </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/bgBottomNavigation"
        app:itemIconTint="@drawable/bottom_navigation_selector"
        app:itemTextColor="@android:color/white"
        app:menu="@menu/bottom_navigation" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>